syntax = "proto3";

package discovery;

option go_package = "blackprism.org/noyra/grpc-proto/discovery";

// Service de découverte compatible avec Envoy xDS v3
service DiscoveryService {
  // Streaming pour les Clusters (CDS)
  rpc StreamClusters(stream DiscoveryRequest) returns (stream DiscoveryResponse);
  
  // Streaming pour les Listeners (LDS)
  rpc StreamListeners(stream DiscoveryRequest) returns (stream DiscoveryResponse);
  
  // Streaming pour les Routes (RDS)
  rpc StreamRoutes(stream DiscoveryRequest) returns (stream DiscoveryResponse);
  
  // Streaming pour les Endpoints (EDS)
  rpc StreamEndpoints(stream DiscoveryRequest) returns (stream DiscoveryResponse);
  
  // API agrégée pour tous les types de ressources
  rpc StreamAggregatedResources(stream DiscoveryRequest) returns (stream DiscoveryResponse);
}

// Requête de découverte
message DiscoveryRequest {
  string version_info = 1;
  string node_id = 2;
  string resource_type = 3;
  repeated string resource_names = 4;
  string response_nonce = 5;
}

// Réponse de découverte
message DiscoveryResponse {
  string version_info = 1;
  repeated Resource resources = 2;
  string type_url = 3;
  string nonce = 4;
}

// Représentation d'une ressource
message Resource {
  string name = 1;
  string version = 2;
  bytes value = 3;
}
